examples/test/testpolicy9797.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9797
  namespace: namespace320
spec:
  podSelector:
    matchLabels:
      key36: value0
      key49: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value4
          key40: value22
          key36: value40
      podSelector:
        matchLabels:
          key42: value38
